# klettres

./: CMakeLists.txt
debian/: changelog  control  copyright  klettres-data.install  klettres-data.lintian-overrides  klettres-data.maintscript  klettres.install
po/: CMakeLists.txt
po/ar/: klettres.po
po/be/: klettres.po
po/bg/: klettres.po
po/bs/: klettres.po
po/ca/: klettres.po
po/ca/docs/klettres/: index.docbook
po/ca@valencia/: klettres.po
po/cs/: klettres.po
po/da/: klettres.po
po/de/: klettres.po
po/el/: klettres.po
po/en_GB/: klettres.po
po/eo/: klettres.po
po/es/: klettres.po
po/et/: klettres.po
po/eu/: klettres.po
po/fa/: klettres.po
po/fi/: klettres.po
po/fr/: klettres.po
po/ga/: klettres.po
po/gl/: klettres.po
po/he/: klettres.po
po/hi/: klettres.po
po/hr/: klettres.po
po/hu/: klettres.po
po/id/: klettres.po
po/is/: klettres.po
po/it/: klettres.po
po/ja/: klettres.po
po/kk/: klettres.po
po/km/: klettres.po
po/ko/: klettres.po
po/lt/: klettres.po
po/lv/: klettres.po
po/ml/: klettres.po
po/mr/: klettres.po
po/nb/: klettres.po
po/nds/: klettres.po
po/nl/: klettres.po
po/nn/: klettres.po
po/pa/: klettres.po
po/pl/: klettres.po
po/pt/: klettres.po
po/pt_BR/: klettres.po
po/ro/: klettres.po
po/ru/: klettres.po
po/se/: klettres.po
po/sk/: klettres.po
po/sl/: klettres.po
po/sq/: klettres.po
po/sv/: klettres.po
po/ta/: klettres.po
po/tg/: klettres.po
po/ug/: klettres.po
po/uk/: klettres.po
po/wa/: klettres.po
po/zh_CN/: klettres.po
po/zh_TW/: klettres.po
(+1 files in other folders)
